--- a/ARuneflip-complete/package.json
+++ b/ARuneflip-complete/package.json
@@ -18,7 +18,7 @@
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@supabase/ssr": "^0.1.0" 
+    "@supabase/ssr": "^0.1.0",  // <-- COMMA ADDED HERE
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
