--- a/ARuneflip-complete/package.json
+++ b/ARuneflip-complete/package.json
@@ -18,7 +18,7 @@
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@supabase/ssr": "^0.1.0",  // <-- COMMA ADDED HERE
+    "@supabase/ssr": "^0.1.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -56,6 +56,11 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "supabase": "^1.110.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
   },
   "engines": {
     "node": ">=18.0.0"
