--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.87.6",
     "@supabase/supabase-js": "^2.38.4",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/ssr": "^0.2.0" ,
     "framer-motion": "^10.16.4",
     "tailwindcss": "^3.3.5",
     "autoprefixer": "^10.4.16",
